# Cpp20Learn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: all_tests.cpp  arrayloops.cpp  arrayloops.h  arrayloops_test.cpp  classes.cpp  classes.h  containers.cpp  containers.h  doctest.h  enums.h  functions.cpp  functions.h  inheritance.cpp  inheritance.h  main.cpp  optional.cpp  optional.h  pointersreferences.cpp  pointersreferences.h  polymorphism.cpp  polymorphism.h  random.cpp  random.h  templates.cpp  templates.h  utilities.cpp  utilities.h
